# bsky_tui

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  utils.rs
src/app/: config.rs  mod.rs  state.rs
src/app/ui/: mod.rs
src/app/ui/draw/: mod.rs
src/app/ui/layout/: mod.rs
src/bsky/: mod.rs
src/inputs/: events.rs  key.rs
src/io/: handler.rs  mod.rs
