[package]
name = "bsky_tui"
version = "0.0.4-dev"
edition = "2018"
authors = ["Keisuke Toyota <hm.pudding0715@gmail.com>"]
repository = "https://github.com/ksk001100/bsky_tui"
keywords = ["bluesky", "bsky", "tui"]
license-file = "LICENSE"
readme = "README.md"
description = "Bluesky TUI Client"

[dependencies]
crossterm = "0.27"
eyre = "0.6"
seahorse = "2.1"
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.22", features = ["all-widgets"] }
atrium-api = "0.20"
atrium-xrpc = "0.10"
atrium-xrpc-client = "0.5"
chrono = "0.4"
webbrowser = "0.8"
tui-input = "0.8"
console-subscriber = "0.1"
dirs = "5.0"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
toml = "0.7"
