[package]
name = "bsky_tui"
version = "0.0.7"
edition = "2018"
authors = ["Keisuke Toyota <hm.pudding0715@gmail.com>"]
repository = "https://github.com/ksk001100/bsky_tui"
keywords = ["bluesky", "bsky", "tui"]
license-file = "LICENSE"
readme = "README.md"
description = "Bluesky TUI Client"

[dependencies]
crossterm = "0.28"
eyre = "0.6"
seahorse = "2.2"
tokio = { version = "1", features = ["full"] }
ratatui = { version = "0.29", features = ["all-widgets"] }
atrium-api = "0.25"
atrium-xrpc = "0.12"
atrium-xrpc-client = "0.5"
bsky-sdk = "0.1.16"
config = "0.15"
chrono = "0.4"
webbrowser = "1"
tui-input = "0.11"
console-subscriber = "0.4"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
